tests/snapshots/cli__debug_list_map.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/debug_list_map.bend
---
error: unexpected argument '-d' found

  tip: to pass '-d' as a value, use '-- -d'

Usage: bend run-c [OPTIONS] <PATH> [ARGUMENTS]...

For more information, try '--help'.
