tests/snapshots/cli__debug_u60_to_nat.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/debug_u60_to_nat.bend
---
error: unexpected argument '-d' found

  tip: to pass '-d' as a value, use '-- -d'

Usage: bend run [OPTIONS] <PATH> [ARGUMENTS]...

For more information, try '--help'.
