tests/snapshots/cli__debug_u60_to_nat.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/debug_u60_to_nat.hvm
---
(λa (U60ToNat a) 4)
---------------------------------------
(λa match a { 0: Z; 1+b: (S (U60ToNat b)) } 4)
---------------------------------------
match 4 { 0: Z; 1+a: (S (U60ToNat a)) }
---------------------------------------
(λa λb (S (U60ToNat b)) * 3)
---------------------------------------
(λa (S (U60ToNat a)) 3)
---------------------------------------
(S (U60ToNat 3))
---------------------------------------
(S (λa (S (U60ToNat a)) 2))
---------------------------------------
(S (S (U60ToNat 2)))
---------------------------------------
(S (S (λa (S (U60ToNat a)) 1)))
---------------------------------------
(S (S (S (U60ToNat 1))))
---------------------------------------
(S (S (S (λa (S (U60ToNat a)) 0))))
---------------------------------------
(S (S (S (S (U60ToNat 0)))))
---------------------------------------
(S (S (S (S Z))))
---------------------------------------
(S (S (S #Nat λ* #Nat λa #Nat (a Z))))
---------------------------------------
(S (S #Nat λ* #Nat λa #Nat (a #Nat λ* #Nat λb #Nat (b Z))))
---------------------------------------
(S #Nat λ* #Nat λa #Nat (a #Nat λ* #Nat λb #Nat (b #Nat λ* #Nat λc #Nat (c Z))))
---------------------------------------
(S (S (S (S Z))))
