tests/snapshots/cli__debug_u60_to_nat_linear.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/debug_u60_to_nat_linear.hvm
---
(λa (U60ToNat a) 4)
---------------------------------------
(U60ToNat 4)
---------------------------------------
(λa (S (U60ToNat a)) 3)
---------------------------------------
(S (U60ToNat 3))
---------------------------------------
(S (λa (S (U60ToNat a)) 2))
---------------------------------------
(S (S (U60ToNat 2)))
---------------------------------------
(S (S (λa (S (U60ToNat a)) 1)))
---------------------------------------
(S (S (S (U60ToNat 1))))
---------------------------------------
(S (S (S (λa (S (U60ToNat a)) 0))))
---------------------------------------
(S (S (S (S (U60ToNat 0)))))
---------------------------------------
(S (S (S (S Z))))
---------------------------------------
(S (S (S (S Z))))
---------------------------------------
(S (S (S (S Z))))
---------------------------------------
(S (S (S (S Z))))
---------------------------------------
(S (S (S (S Z))))
