tests/snapshots/cli__desugar_bool_scott.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/desugar_bool_scott.bend
---
(main) = λa λ* a

(Boolean/True) = λa λ* a

(Boolean/False) = λ* λa a
