tests/snapshots/cli__desugar_float_combinators.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/desugar_float_combinators.hvm
---
(Z) = λ* λb b

(S) = λa λb let {b b_2} = b; λc (b (a b_2 c))

(get) = λa (a get$C0 0)

(main) = (get (S (S Z)))

(get$C0) = λb (+ b 1)
