tests/snapshots/cli__desugar_inline.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/desugar_inline.hvm
---
(id) = λa a

(main) = (id id)
